--- a/style.css
+++ b/style.css
@@ -1,107 +1,261 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap');
 
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 
 }
-:root{
---blue:#8486a9;
---red:#fb6087;
---darkblue:#343650;
---verydarkblue:#1e1f29;
---almostblack:#191a24;
+
+:root {
+    --blue: #8486a9;
+    --red: #fb6087;
+    --darkblue: #343650;
+    --verydarkblue: #1e1f29;
+    --almostblack: #191a24;
 }
 
-body{
-background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='1440' height='197'%3e%3cdefs%3e%3cpath id='a' d='M0 0h1440v197H0z'/%3e%3c/defs%3e%3cg fill='none' fill-rule='evenodd'%3e%3cmask id='b' fill='%23fff'%3e%3cuse xlink:href='%23a'/%3e%3c/mask%3e%3cg mask='url(%23b)'%3e%3cpath fill='%23211A29' d='M1440 50.205L1088.504 0 949.669 50.205 878 25.102 556 0 398.525 50.205l-95.807-25.103-51.328 16.761L45.704 0 0 17.701V160h1440z'/%3e%3cpath fill='%231A1823' d='M1394.296 1l94.649 69.336 50.047-49.449zM1137.282 42.576l51.328 27.76 80.6-5.426zM884 1l157.475 83.151 80.929-26.062zM351.496 1l138.835 83.151 49.321-28.526z'/%3e%3cpath fill='%232F2439' d='M0 84.151L351.496 1l138.835 83.151L562 42.576 884 1l157.475 83.151 95.807-41.575 51.328 27.76L1394.296 1 1440 30.317V266H0z'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
-    background-position:bottom;
-    background-size:100% 20%;
-    background-color:var(--almostblack);
-    min-height: 100vh;
-font-family: 'Red Hat Text', sans-serif;
-    font-weight: 700;
 
-    display:flex;
+/* .content::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: url("./design/desktop-design.jpg") no-repeat;
+    opacity: 0.3;
+    z-index: 1;
+    animation: myanim 1s alternate infinite ease;
+}
+
+@keyframes myanim {
+
+    100% {
+        opacity: .2;
+    }
+
+}
+
+.content >* {
+    opacity: 0.85;
+} */
+
+
+
+
+body {
+    position: relative;
+    min-height: 100vh;
+    display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
+}
+
+
+
+.content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='1440' height='197'%3e%3cdefs%3e%3cpath id='a' d='M0 0h1440v197H0z'/%3e%3c/defs%3e%3cg fill='none' fill-rule='evenodd'%3e%3cmask id='b' fill='%23fff'%3e%3cuse xlink:href='%23a'/%3e%3c/mask%3e%3cg mask='url(%23b)'%3e%3cpath fill='%23211A29' d='M1440 50.205L1088.504 0 949.669 50.205 878 25.102 556 0 398.525 50.205l-95.807-25.103-51.328 16.761L45.704 0 0 17.701V160h1440z'/%3e%3cpath fill='%231A1823' d='M1394.296 1l94.649 69.336 50.047-49.449zM1137.282 42.576l51.328 27.76 80.6-5.426zM884 1l157.475 83.151 80.929-26.062zM351.496 1l138.835 83.151 49.321-28.526z'/%3e%3cpath fill='%232F2439' d='M0 84.151L351.496 1l138.835 83.151L562 42.576 884 1l157.475 83.151 95.807-41.575 51.328 27.76L1394.296 1 1440 30.317V266H0z'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+    background-position: bottom;
+    background-size: 100% 20%;
+    background-color: var(--almostblack);
+    font-family: 'Red Hat Text', sans-serif;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
-body>*{
-    border:2px red solid;
+
+
+.heading {
+    color: white;
+    flex-basis: 20%;
+    text-transform: uppercase;
+    display: flex;
+    align-items: flex-end;
+    font-size: 20px;
+    letter-spacing: 9px;
+    ;
+
+
+}
+
+.timer {
+    flex-basis: 46%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.number {
+    font-size: 72px;
+    ;
+    height: 147px;
+    width: 155px;
+
+    color: var(--red);
+    position: relative;
+}
+
+.number::after {
+    position: absolute;
+    top: 157px;
+    z-index: 999;
+    overflow: visible;
+    content: "DAYS";
+    text-align: center;
+    width: 100%;
+    color: var(--blue);
+    font-size: 17px;
+    ;
+}
+
+.number.hours::after {
+    content: "HOURS";
+}
+
+.number.mins::after {
+    content: "MINS";
+}
+
+.number.secs::after {
+    content: "SECONDS";
 }
 
 
-.timer{
-display:flex;
-flex-direction: row;
-align-items: center;
-justify-content: space-evenly;
+.number+.number {
+    margin-left: 20px;
+}
+
+.backtop,
+.backbot,
+.card {
+    position: absolute;
+    text-align: center;
+    ;
+    width: 100%;
+    height: 50%;
 
 
 }
-.number{
-font-size: 72px;;
-    height:147px;
-    width:144px;
-    border:3px green solid;
-    color:var(--red);
-position:relative;
-overflow: hidden;
+
+.ball1,
+.ball2 {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: var(--almostblack);
+    border-radius: 50%;
+    left: -5px;
+    top: calc(50% - 5px);
+    z-index: 999;
 }
 
-.backtop, .backbot,.card{
-    position:absolute;
-  text-align: center;;
-    width:100%;
-    height:50%;
-    
+.ball2 {
+    left: calc(100% - 5px);
 }
 
-.backtop{
-    background-color: aqua;
-    overflow:hidden;
-    line-height:141px;
+.backtop {
+    border: 1px solid black;
+    ;
+    overflow: hidden;
+    line-height: 141px;
+    background-color: var(--darkblue)
 }
-.backbot{
-    background-color: bisque;
-    bottom:0;
+
+.backbot {
+
+    bottom: 0;
     line-height: 0px;
-    overflow:hidden;
-}
-.card{
-background-color: coral;
-transform-style: preserve-3d;
-transform-origin: bottom center;
-animation:cardani 2s infinite;
+    overflow: hidden;
+    border: 1px solid black;
+    ;
 
+    background-color: var(--darkblue)
+}
+
+.card {
+    background-color: yellow;
+    transform-style: preserve-3d;
+    transform-origin: bottom center;
+    border: 1px solid black;
+    ;
+
+
+}
+
+.cardflip {
+    animation: cardani 900ms forwards linear;
 }
 
 
 @keyframes cardani {
-    0%, 30%{transform:rotatex(0deg);}
-    70%, 100%{transform:rotatex(180deg);}
+
+    0%,
+    30% {
+        transform: rotatex(0deg);
+    }
+
+    70%,
+    100% {
+        transform: rotatex(180deg);
+    }
 }
 
-.face{
-    position:absolute;
-    backface-visibility:hidden;
-    width:100%;
-    height:100%;
+.face {
+    position: absolute;
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    background-color: yellow;
+    ;
+
 }
-.front{
-    background-color: khaki;
-    line-height:140px;
+
+.front {
+
+    line-height: 140px;
     overflow: hidden;
+    background-color: var(--darkblue);
 
 }
-.back{
-    background-color:brown;;
-    transform :rotateY(180deg) rotatez(180deg);
-    line-height:0px;
-    overflow:hidden;
 
+.back {
+
+    transform: rotateY(180deg) rotatez(180deg);
+    line-height: 0px;
+    overflow: hidden;
+    background-color: var(--darkblue);
+
+
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 30%;
+    margin: auto;
+    margin-bottom: 63px;
+}
+
+.social a:hover img {
+    filter: hue-rotate(180deg) brightness(1.5);
+
+}
+
+@media (max-width:750px) {
+
+
+    .number {
+        width: 100px;
+    }
 }
